syntax = "proto3";

package order;

option go_package = "order-service/proto;orderpb";

service OrderService {
  rpc CreateOrder(CreateOrderRequest) returns (CreateOrderResponse);
  rpc CancelOrder(CancelOrderRequest) returns (CancelOrderResponse);
}

message CreateOrderRequest {
  string order_id = 1;
}

message CreateOrderResponse {
  bool success = 1;
  string message = 2;
}

message CancelOrderRequest {
  string order_id = 1;
}

message CancelOrderResponse {
  bool success = 1;
  string message = 2;
}
