syntax = "proto3";

package shipping;

option go_package = "shipping-service/proto;shippingpb";

service ShippingService {
  rpc StartShipping (StartShippingRequest) returns (StartShippingResponse);
  rpc CancelShipping (CancelShippingRequest) returns (CancelShippingResponse);
}

message StartShippingRequest {
  string order_id = 1;
  string address = 2;
}

message StartShippingResponse {
  bool success = 1;
  string message = 2;
}

message CancelShippingRequest {
  string order_id = 1;
}

message CancelShippingResponse {
  bool success = 1;
  string message = 2;
}
